[gd_scene load_steps=4 format=3 uid="uid://cjugnbmligmuw"]

[ext_resource type="Script" path="res://Habilidades/fire_aurora.gd" id="1_7aia6"]

[sub_resource type="CircleShape2D" id="CircleShape2D_k8c06"]
radius = 67.1193

[sub_resource type="CanvasTexture" id="CanvasTexture_rfei7"]

[node name="FireAurora" type="Area2D" groups=["enemies_on_fire"]]
script = ExtResource("1_7aia6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(2.38419e-07, 0)
shape = SubResource("CircleShape2D_k8c06")

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
position = Vector2(-1.5, 2)
scale = Vector2(75, 84)
texture = SubResource("CanvasTexture_rfei7")

[node name="Damage_timer" type="Timer" parent="." groups=["enemies_on_fire"]]
autostart = true

[node name="duration_timer" type="Timer" parent="."]
wait_time = 10.0

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="timeout" from="Damage_timer" to="." method="_on_damage_timer_timeout"]
